--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-recipebook-env/
+
+*db.sqlite3
+
+__pycache__/
+*.pyc
+*.pyo
+
+venv/
+env/
+
+**/migrations/*
+!**/migrations/__init__.py  
+
+.vscode/
+.idea/
+*.swp
+
+.env
